further reduce image size

--- a/css/creative.css
+++ b/css/creative.css
@@ -388,7 +388,7 @@ header.masthead p {
 }
 
 #contact {
-  background-image: url(../img/footer_paper_texture.png);
+  background-image: url(../img/footer_paper_texture.jpg);
   background-repeat:repeat;
   padding: 40px 0 0 0;
 }
