--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,6 +1,6 @@
 // Variables
 
-$white: #fff !default;
+$white: #fffdf7 !default;
 $gray-100: #f8f9fa !default;
 $gray-200: #e9ecef !default;
 $gray-300: #dee2e6 !default;
@@ -10,6 +10,8 @@ $gray-600: #868e96 !default;
 $gray-700: #495057 !default;
 $gray-800: #343a40 !default;
 $gray-900: #212529 !default;
-$black: #000 !default;
+$black: #6f5c68 !default;
+$mint: #e1f7e9 !default;
+$dark-purple: #434156 !default;
 
-$primary: #F05F40 !default;
+$primary: #414141 !default;
