--- a/scss/creative.scss
+++ b/scss/creative.scss
@@ -1,8 +1,7 @@
 @import "variables.scss";
 @import "mixins.scss";
 @import "global.scss";
-@import "navbar.scss";
 @import "masthead.scss";
 @import "services.scss";
-@import "portfolio.scss";
+@import "footer.scss";
 @import "bootstrap-overrides.scss";
