--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -9,43 +9,21 @@ body {
   @include serif-font;
 }
 
-hr {
-  max-width: 50px;
-  border-width: 3px;
-  border-color: $primary;
-}
-
-hr.light {
-  border-color: $white;
-}
-
 a {
-  color: $primary;
+  color: $white;
   @include transition-all;
   &:hover {
-    color: darken($primary, .1);
+    color: darken($white, .1);
   }
 }
 
-h1,
 h2,
-h3,
-h4,
-h5,
-h6 {
-  @include sans-serif-font;
+h3 {
+  color: $black;
 }
 
-.bg-primary {
-  background-color: $primary !important;
-}
-
-.bg-dark {
-  background-color: $gray-900 !important;
-}
-
-.text-faded {
-  color: fade-out($white, .3);
+.bg-mint {
+  background-color: $mint !important;
 }
 
 section {
@@ -54,26 +32,4 @@ section {
 
 .section-heading {
   margin-top: 0;
-}
-
-::-moz-selection {
-  color: $white;
-  background: $gray-900;
-  text-shadow: none;
-}
-
-::selection {
-  color: $white;
-  background: $gray-900;
-  text-shadow: none;
-}
-
-img::selection {
-  color: $white;
-  background: transparent;
-}
-
-img::-moz-selection {
-  color: $white;
-  background: transparent;
 }
