--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -11,8 +11,8 @@
   background-size: cover;
 }
 @mixin serif-font() {
-  font-family: 'Merriweather', 'Helvetica Neue', Arial, sans-serif;
+  font-family: 'Didact Gothic', 'Helvetica Neue', Arial, sans-serif;
 }
 @mixin sans-serif-font() {
-  font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
+  font-family: 'Didact Gothic', 'Helvetica Neue', Arial, sans-serif;
 }
