--- a/css/creative.css
+++ b/css/creative.css
@@ -1,6 +1,6 @@
 /*!
  * Start Bootstrap - Creative v5.0.1 (https://startbootstrap.com/template-overviews/creative)
- * Copyright 2013-2018 Start Bootstrap
+ * Copyright 2013-2019 Start Bootstrap
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-creative/blob/master/LICENSE)
  */
 
@@ -68,7 +68,7 @@ header.masthead #header-logo {
   width: 300px;
 }
 
-header.masthead #header-address {
+header.masthead #header-address, header.masthead #header-opening-time {
   font-weight: bold;
   font-size: 1.2rem;
 }
@@ -83,7 +83,7 @@ header.masthead .header-motto {
   header.masthead p {
     font-size: 1.15rem;
   }
-  header.masthead #header-address {
+  header.masthead #header-address, header.masthead #header-opening-time {
     font-size: 1.5rem;
   }
 }
